gfx/layers/client/TiledContentClient.cpp
@@ -1695,7 +1695,7 @@ BasicTiledLayerPaintData::ResetPaintData()
   mLowPrecisionPaintCount = 0;
   mPaintFinished = false;
   mCompositionBounds.SetEmpty();
-  mCriticalDisplayPort.SetEmpty();
+  mCriticalDisplayPort = Nothing();
 }
 
 } // namespace layers
